--- a/index.html
+++ b/index.html
@@ -8,72 +8,44 @@ doc html version 5-->
         <!-- lo vel navegdor pero no "dibuja algo en pantalla" -->
         <title>Codo a Codo - Clase3</title>
         <!-- ctrl +s -->
+        <meta charset="utf-8">
     </head>
 
     <body>
         <!-- lo ve y lo dibuja-->
-        <h1>Título Principal de la Página</h1>
+        <h1>Club Atletico River Plate</h1>
 
-        <!-- etiquetas básicas-->
-        <h2>Sub titulo de 2do nivel</h2>
-        <h3>Sub titulo de 2do nivel</h3>
-        <h4>Sub titulo de 2do nivel</h4>
-        <h5>Sub titulo de 2do nivel</h5>
-        <h6>Sub titulo de 2do nivel</h6>
-
-        <!-- parrafo-->
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusantium corporis eos cumque modi blanditiis ad, id eaque quae quo, sequi facere, explicabo ratione fugit ex optio necessitatibus inventore natus!
-        </p>
-
-        <a href="http://www.google.com.ar">
-            ir a google
-        </a>
-        <!--salto de linea -->
-        <br>  
-        <!--ctrl + space -->
-        <a href="about.html">
-            Ir a About
-        </a>
-
-        <!-- pasos para hacer una torta-->
-        <p>Pasos para hacer una torta:</p>
-        <!-- lista con orden-->
-        <ol>
-            <!-- list item -->
-            <li>Comprar huevos</li>
-            <li>Comprar leche</li>
-            <li>Comprar azucar</li>
-        </ol>
-
-        <!--lista sin orden -->
-        <p>Lista de cosas que no me quiero olvidar</p>
-
-        
-        <ul>
-          <li>html</li>
-          <li>html</li>
-          <li>js</li>
-        </ul>
-
-        <!-- un link dentro de un ul-->
-        <p>Sitios:</p>
-        <ol>
-            <li>
-                <a href="https://youtu.be/b34hQ4aIKPA">MercadoLibre</a>
-            </li>
-            <li>
-                <a href="https://youtu.be/b34hQ4aIKPA">Google</a>
-            </li>
-        </ol>
-
-        <!-- BÁSICAS -->
-        <p>
-
-            <b>Lorem</b> <i>ipsum</i> <mark>dolor</mark> <ins>sit amet</ins> <small>consectetur</small> <del>adipisicing</del> <sup>elit</sup>. <br>
-        Miamiiiiiii quae nobis nulla incidunt et, earum repudiandae officiis sint, quidem minus tempore id, cum laborum. Quia velit ex nam perferendis odio.
-        </p>
-    </body>  
-
-<!-- cierre de etiqueta-->
+        <header>
+            <ul>
+                <li>
+                    <a href="Formularios.html">Formularios</a>
+                </li>
+                <li>
+                    <a href="tablas.html">Tablas</a>
+                </li>
+            </ul>
+        </header>
+        <section>
+            <h2> Videos</h2>
+            <iframe width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/LW9T5_qyG98?controls=0" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+        </section>
+        <section>
+            <h2> Imágenes</h2>
+            <img 
+            src="https://www.cronista.com/files/image/399/399747/61890e160fab6_950_534!.webp?s=412af044a7911201c65f00a1a700da54&d=1638984290&oe=jpg" 
+            width="300" 
+            height="auto">
+           <img 
+           src="https://fotos.perfil.com/2019/02/01/0228-marcelo-gallardo-g-fb.jpg"  
+           width="250"
+           height="auto">
+        </section>
+    </body>
 </html>
