--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ doc html version 5-->
 
     <body>
         <!-- lo ve y lo dibuja-->
-        <h1>Club Atletico River Plate</h1>
+        <h1>Codo a Codo 4.0</h1>
 
         <header>
             <ul>
@@ -27,13 +27,24 @@ doc html version 5-->
         </header>
         <section>
             <h2> Videos</h2>
-            <iframe width="560" 
+            <iframe 
+            width="560" 
             height="315" 
-            src="https://www.youtube.com/embed/LW9T5_qyG98?controls=0" 
+            src="https://www.youtube.com/embed/ymvYySd_P2E?controls=0" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
+        </iframe>
+        <br>
+            <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/lAt5eGX1EIs?controls=0" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
         </iframe>
         </section>
         <section>
@@ -43,8 +54,8 @@ doc html version 5-->
             width="300" 
             height="auto">
            <img 
-           src="https://fotos.perfil.com/2019/02/01/0228-marcelo-gallardo-g-fb.jpg"  
-           width="250"
+           src="https://lh3.googleusercontent.com/INvwJM9w1LJvkkSHW64k_iQRj_yFywJ676AsUlmLR6UxdC85IQmGkKwz6XiYhtPiOa9KCtN3lX-X_W1HIYz0021m__8Xw6FiaLhlDRY_c-6q8w0tK5Xw4k-m_68l8zUvyPybOKFIky1Vb0k2oF5tKL2CRStAI92RlhW6QTkOmrBWO9P5k2qeE2xtFImyyZbWI2tbs49cv0mhMjWwyT2v3I6MPhQK5Hv8xuoJ0d4RTm-X1VovgT-OH0mDXcGi8SHFGbdNo6RhWKD_mYczYNiVEokyC3fICDSFFl2ZNQzJLd5ESBl7BTbuvrYQ6tPhoK3hGQDK_df3UWGyKVdOi48u6iGl2iDLBNMtOxrIY39TDgfEs-rjx5fGkIYz2Kzd9Oqo25ijy1cMqo5mcUhTBy97rYFmyQ_O7CYZVvyLHnAbz08dCdrTahvXMsKRnvPE8jXfCU4BIC56MPxvhtXiZRcBr9FBGw1eROj-UGL_pVu25SfZz35d0M1y7MtKjozVFdp3U2zrDMHEbiSr-KT-wNwxfl2TtdkTNDrdiut0jFivFgTr2LpWdX0scRKUIr6_R9BnSlHbJ-To4sEoD7Vq0cUL2bML8C7vtsmHKUIphR6EJd50z-FpT6BgyF8qJynG5x43njBKAqNi2mV796IWEfhS2dTQObYnDCZwJVQlOYieKaqh5f0FI4-SfnXhieOLtlAt6hEyTlCsLW7t8MtDHJ9PAkQ1TUfghELAPINVBWMLjyTbyhF3zO4pNOvLgz95=w448-h597-no?authuser=0"  
+           width="120"
            height="auto">
         </section>
     </body>
