--- a/registrar-formulario.html
+++ b/registrar-formulario.html
@@ -12,65 +12,8 @@
 <body>
 <main>
        <h1>Datos enviados desde formularios.html</h1>
-
-
-            <section>
-                <h2> Tablas</h2>
-                <table border="1">
-                    <!--columnas-->
-                    <tr>
-                 <th>
-                        Col1
-                    </th>
-                    <th>
-                        Col2
-                    </th>
-                    <th>
-                        ColN
-                    </th>
-                </tr>
-                <!--filas-->
-                <tr>
-                    <td>
-                        col1 fila1
-                    </td>
-                    <td>
-                        col2 fila1
-                    </td>
-                    <td>
-                        col3 fila1
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        col1 fila2
-                    </td>
-                    <td>
-                        col2 fila2
-                    </td>
-                    <td>
-                        col3 fila2
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        fila 2 pero coupa 3 columnas
-                    </td>
-                </tr>
-                <tr>
-                    <td> 
-                        col1 fila 4
-                    <td colspan="2">
-                      col1 fila2, pero ocupa 2 columnas
-                    </td>
-                </tr>
-            </table>
-            </section>
-            <a href="Formularios.html">Volver a Formularios
-                <br>
-                <a href="index.html">
-                    Volver a Index
-                </a>
+       <a href="Formularios.html">
+       </a>
     </main>
 </body>
 </html>
